syntax = "proto3";

package mediadelivery;

option go_package = "github.com/kkiling/media-delivery/api";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service VideoContentService {
  rpc CreateVideoContent(CreateVideoContentRequest)  returns (CreateVideoContentResponse) {
    option (google.api.http) = {
      post: "/v1/content";
      body: "*";
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Создание файловой раздачи";
    };
  };
  rpc GetVideoContent(GetVideoContentRequest)  returns (GetVideoContentResponse) {
    option (google.api.http) = {
      get: "/v1/content";
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Получение доставок для кино/тв сериала"
    };
  };
  rpc GetTVShowDeliveryData(GetTVShowDeliveryDataRequest)  returns (GetTVShowDeliveryDataResponse) {
    option (google.api.http) = {
      get: "/v1/tvshow/delivery/data";
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Получение данных стейта доставки"
    };
  };
  rpc ChoseTorrentOptions(ChoseTorrentOptionsRequest)  returns (ChoseTorrentOptionsResponse) {
    option (google.api.http) = {
      patch: "/v1/tvshow/delivery/chose-torrent";
      body: "*";
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Выбор раздачи с торрента"
    };
  };
  rpc ChoseFileMatchesOptions(ChoseFileMatchesOptionsRequest)  returns (ChoseFileMatchesOptionsResponse) {
    option (google.api.http) = {
      patch: "/v1/tvshow/delivery/chose-file-matches";
      body: "*";
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Подтверждение метча файлов"
    };
  };
}

message TVShowID  {
  uint64 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type: INTEGER
  }];
  uint32 season_number = 2;
}

message ContentID {
  optional uint64 movie_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type: INTEGER
  }];
  optional TVShowID tv_show = 2;
}

enum DeliveryStatus {
  DeliveryStatusUnknown = 0;
  DeliveryStatusFailed = 1;
  DeliveryStatusInProgress = 2;
  DeliveryStatusDelivered = 3;
}

message VideoContent {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  DeliveryStatus delivery_status = 3;
}

enum Status {
  StatusUnknown = 0;
  NewStatus = 1;
  InProgressStatus = 2;
  CompletedStatus = 3;
  FailedStatus = 4;
}

enum TVShowDeliveryStatus {
  // Неизвестный статус доставки
  TVShowDeliveryStatusUnknown = 0;
  // Генерация запроса к трекеру
  GenerateSearchQuery = 1;
  // Поиск раздач сезона сериала/фильма
  SearchTorrents = 2;
  // Ожидание выбора раздачи пользователем
  WaitingUserChoseTorrent = 3;
  // Получение магнет ссылки
  GetMagnetLink = 4;
  // Добавление раздачи для скачивания торрент клиентом
  AddTorrentToTorrentClient = 5;
  // Получение информации о файлах раздачи
  PrepareFileMatches = 6;
  // Ожидание подтверждения пользователем соответствий выбора файлов
  WaitingChoseFileMatches = 7;
  // Ожидание завершения окончания скачивания раздачи
  WaitingTorrentDownloadComplete = 8;
  // Формирование каталогов и иерархии файлов
  CreateVideoContentCatalogs = 9;
  // Определение необходимости конвертации файлов
  DeterminingNeedConvertFiles = 10;
  // Запуск конвертирования файлов
  StartMergeVideoFiles = 11;
  // Ожидание завершения конвертации файлов
  WaitingMergeVideoFiles = 12;
  // Копирование файлов из раздачи в каталог медиасервера (точнее создание симлинков)
  CreateHardLinkCopy = 13;
  // GetCatalogsSize получение размеров каталогов сериала
  GetCatalogsSize = 15;
  // Установка методаных серий сезона сериала/фильма в медиасервере
  SetMediaMetaData = 16;
  // Отправка уведомления в telegramm о успешной доставки
  SendDeliveryNotification = 17;
  // Ожидание когда появится информация о файлах в раздаче
  WaitingTorrentFiles = 18;
  // получение информации о эпизодах и каталоге сезона
  GetEpisodesData = 19;
}

message TorrentSearch {
  string title = 1;
  string href = 2;
  string category = 8;
  string size = 3;
  int64 seeds = 4;
  int64 leeches   = 5;
  int64 downloads = 6;
  string added_date = 7;
}

message FileInfo {
  string relative_path = 1;
  string full_path = 2;
  int64  size = 3;
  string extension = 4;
}

message EpisodeInfo {
  uint32 season_number = 1;
  string episode_name = 2;
  uint32 episode_number = 3;
  string file_name = 4;
  string relative_path = 5;
}

message VideoFile {
  FileInfo file = 1;
}

message Track {
  FileInfo file = 1;
  string name = 2;
  string language = 3;
}

message ContentMatches {
  EpisodeInfo episode = 1;
  VideoFile video = 2;
  repeated Track audio_files = 3;
  repeated Track subtitles = 4;
}

message TorrentDownloadStatus {
  enum TorrentState {
    TORRENT_STATE_UNKNOWN = 0;
    TORRENT_STATE_ERROR = 1;
    TORRENT_STATE_UPLOADING = 2;
    TORRENT_STATE_DOWNLOADING = 3;
    TORRENT_STATE_STOPPED = 4;
    TORRENT_STATE_QUEUED = 5;
  }
  TorrentState state = 1;
  float progress = 2;
  bool is_complete = 3;
}

message MergeVideoStatus {
  float progress = 1;
  bool is_complete = 2;
}

message TVShowCatalogPath {
  // Путь до каталога сериала
  string tv_show_path = 1;
  // Путь до каталога сезона (относительно каталога сериала)
  string season_path = 2;
}

message TVShowCatalog {
  // Путь до раздачи сезона сериала
  string torrent_path = 1;
  // Размер файлов раздачи сезона сериала
  string torrent_size_pretty = 2;
  // Путь до сезона сериала на медиасервере
  TVShowCatalogPath media_server_path = 3;
  // Размер файлов раздачи сезона сериала (байты)
  string media_server_size_pretty = 4;
  // Файлы скопированы с раздачи или созданы ссылочная связь
  // True - файлы скопированы
  // False - файлы созданы через линки
  bool is_copy_files_in_media_server = 5;
}

message TVShowDeliveryData {
  // Поисковый запрос поиска торрент файла
  optional SearchQuery search_query = 1;
  // Результат поиска торрент раздач
  repeated TorrentSearch torrent_search = 2;
  // Результат метча файлов
  repeated ContentMatches content_matches = 3;
  // статус скачивания раздачи
  optional TorrentDownloadStatus torrent_download_status = 4;
  // статус сшивания файлов
  optional MergeVideoStatus merge_video_status = 5;
  // TVShowCatalogInfo информация о каталогах сериала
  optional TVShowCatalog tv_show_catalog_info = 6;
}

message TVShowDeliveryError {
  enum ErrorType {
    TVShowDeliveryError_Unknown = 0;
    // Торрент трекер не доступен
    TorrentSiteForbidden = 1;
    // Файлы на медиасервере уже существуют
    FilesAlreadyExist = 2;
  }
  string raw_error = 1;
  ErrorType error_type = 2;
}

message SearchQuery {
  string Query = 1;
}

message TVShowDeliveryState {
  TVShowDeliveryData data = 1;
  TVShowDeliveryStatus step = 2;
  Status status = 3;
  optional TVShowDeliveryError error = 4;
}

message CreateVideoContentRequest {
  ContentID content_id = 1;
}

message CreateVideoContentResponse {
  VideoContent result = 1;
}

message GetVideoContentRequest {
  ContentID content_id = 1;
}

message GetVideoContentResponse {
  repeated VideoContent items = 1;
}

message GetTVShowDeliveryDataRequest {
  ContentID content_id = 1;
}

message GetTVShowDeliveryDataResponse {
  TVShowDeliveryState result = 1;
}

message ChoseTorrentOptionsRequest {
  ContentID content_id = 1;
  // Пользователь выбрал конкретный торрента файл
  optional string href = 2;
  // Пользователь поменял поисковый запрос
  optional string new_search_query = 3;
}

message ChoseTorrentOptionsResponse {
  TVShowDeliveryState result = 1;
}

message ChoseFileMatchesOptionsRequest {
  ContentID content_id = 1;
  // Пользователь подтверждает сметченные файлы
  bool approve = 2;
}

message ChoseFileMatchesOptionsResponse {
  TVShowDeliveryState result = 1;
}